fixed overflow issues

--- a/Tetrio.Overlay/wwwroot/web/res/css/base.css
+++ b/Tetrio.Overlay/wwwroot/web/res/css/base.css
@@ -21,6 +21,7 @@ html{
 body {
     background: transparent;
     color:white;
+    overflow: hidden;;
 }
 
 img {
